<resources>
    <string name="app_name">Rest Consuming Sample App</string>
    <string name="rest_app">pozor, toto je restApp!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
</resources>
